@@ -1,6 +1,7 @@
 ggplot2 0.8.1  (2008-XX-XX)
 ----------------------------------------
 
+* facet_grid: fix bug where tick labels where being produced outside the range of the axes
 * coord_cartesian now calculates scales correctly again
 * geom_abline should now work in a wider variety of situations
 * legend.position and legend.justification work again
